CMAKE_MINIMUM_REQUIRED(VERSION 3.14...3.22)

PROJECT(mtStandalone LANGUAGES CXX)

# --- Import tools ----

INCLUDE(../cmake/tools.cmake)

# ---- Dependencies ----

INCLUDE(../cmake/CPM.cmake)

CPMADDPACKAGE(
    GITHUB_REPOSITORY
    jarro2783/cxxopts
    VERSION
    3.0.0
    OPTIONS
    "CXXOPTS_BUILD_EXAMPLES NO"
    "CXXOPTS_BUILD_TESTS NO"
    "CXXOPTS_ENABLE_INSTALL YES")

CPMADDPACKAGE(NAME mt SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)

# ---- Create standalone executable ----

FILE(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${sources})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20 OUTPUT_NAME "mt")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} mt::mt cxxopts)
